// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyLibrary > renders empty state for folder 1`] = `
<div>
  <div
    class="flex min-h-[52dvh] w-full items-center px-1 py-16 md:py-24"
  >
    <div
      class="grid w-full grid-cols-1 items-center gap-10 md:grid-cols-2 md:gap-16"
    >
      <div>
        <p
          class="mb-5 inline-flex rounded-full bg-main-text/[0.04] px-3 py-1 text-[10px] font-medium uppercase tracking-[0.22em] text-muted-text"
        >
          This folder
        </p>
        <h2
          class="text-[2.75rem] font-medium leading-[0.92] tracking-[-0.045em] text-main-text md:text-[4.5rem]"
        >
          Folder Empty
        </h2>
      </div>
      <div
        class="rounded-[2rem] bg-main-text/[0.04] p-2 ring-1 ring-main-text/[0.06]"
      >
        <div
          class="flex flex-col items-start gap-8 rounded-[calc(2rem-0.5rem)] bg-panel-bg px-8 py-10 shadow-[inset_0_1px_0_rgba(255,255,255,0.6)] dark:shadow-[inset_0_1px_0_rgba(255,255,255,0.06)]"
        >
          <svg
            class="text-indigo-500/40"
            fill="none"
            height="80"
            viewBox="0 0 80 80"
            width="80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 28V20C12 17.79 13.79 16 16 16H28.5L32.5 22H64C66.21 22 68 23.79 68 26V28H12Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
            />
            <path
              d="M12 28V58C12 60.21 13.79 62 16 62H64C66.21 62 68 60.21 68 58V28H12Z"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.5"
            />
            <path
              d="M34 42H56"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
            <path
              d="M30 48H52"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            />
          </svg>
          <p
            class="max-w-xs text-[15px] leading-relaxed tracking-[-0.01em] text-muted-text"
          >
            Drop files here, or use upload above. They land in this folder.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EmptyLibrary > renders empty state for non-folder 1`] = `
<div>
  <div
    class="flex min-h-[52dvh] w-full items-center px-1 py-16 md:py-24"
  >
    <div
      class="grid w-full grid-cols-1 items-center gap-10 md:grid-cols-2 md:gap-16"
    >
      <div>
        <p
          class="mb-5 inline-flex rounded-full bg-main-text/[0.04] px-3 py-1 text-[10px] font-medium uppercase tracking-[0.22em] text-muted-text"
        >
          Start here
        </p>
        <h2
          class="text-[2.75rem] font-medium leading-[0.92] tracking-[-0.045em] text-main-text md:text-[4.5rem]"
        >
          No Files Yet
        </h2>
      </div>
      <div
        class="rounded-[2rem] bg-main-text/[0.04] p-2 ring-1 ring-main-text/[0.06]"
      >
        <div
          class="flex flex-col items-start gap-8 rounded-[calc(2rem-0.5rem)] bg-panel-bg px-8 py-10 shadow-[inset_0_1px_0_rgba(255,255,255,0.6)] dark:shadow-[inset_0_1px_0_rgba(255,255,255,0.06)]"
        >
          <svg
            class="text-indigo-500/40"
            fill="none"
            height="80"
            viewBox="0 0 80 80"
            width="80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="44"
              rx="4"
              stroke="currentColor"
              stroke-linejoin="round"
              stroke-width="2.5"
              width="52"
              x="14"
              y="18"
            />
            <circle
              cx="40"
              cy="38"
              fill="none"
              r="8"
              stroke="currentColor"
              stroke-width="2.5"
            />
            <path
              d="M40 34V42"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2.5"
            />
            <path
              d="M36 38H44"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2.5"
            />
            <path
              d="M26 56L34 50L38 54L46 46L54 52L56 56"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
          <p
            class="max-w-xs text-[15px] leading-relaxed tracking-[-0.01em] text-muted-text"
          >
            Drop files anywhere on this page, or use upload above. The library fills itself.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
